-fixed some spacing problems

--- a/resources/css/GameBoard.module.scss
+++ b/resources/css/GameBoard.module.scss
@@ -21,7 +21,6 @@ $color-circle:rgb(230,159,0);
   h1 {
     font-size: 3rem;
     margin: 0;
-    height: 50%;
   }
 
   .board {
